fix .hero__footer gap size

--- a/style/style.scss
+++ b/style/style.scss
@@ -451,6 +451,10 @@ pre {
       padding-right: 0;
     }
 
+    &__footer {
+      gap: 40px;
+    }
+
     &__image {
       margin-right: 0;
       height: 480px;
